<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bottom_sheet"
        android:paddingBottom="@dimen/_50sdp">

        <LinearLayout
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/ic_back_black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:gravity="center"
                android:text="NETFLIX"
                android:textColor="@color/red"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Tìm trợ giúp trực tuyến"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a" />

        <LinearLayout
            android:id="@+id/ln_center_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintTop_toBottomOf="@+id/b">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_center_support" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="10"
                android:text="Trung tâm trợ giúp"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <View
            android:id="@+id/view_a"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_36sdp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/ln_center_support" />

        <LinearLayout
            android:id="@+id/ln_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintTop_toBottomOf="@+id/view_a">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_private" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="10"
                android:text="Quyền riêng tư"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <View
            android:id="@+id/view_b"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_36sdp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/ln_private" />

        <LinearLayout
            android:id="@+id/ln_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintTop_toBottomOf="@+id/view_b">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_condition" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="10"
                android:text="Điều khoản sự dụng"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <View
            android:id="@+id/view_c"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_36sdp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/ln_condition" />

        <TextView
            android:id="@+id/tv_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="Chúng tôi ở đây để giúp bạn."
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_c" />

        <TextView
            android:id="@+id/tv_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_a" />

        <TextView
            android:id="@+id/tv_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="Bạn đã có tài khoản?"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_b" />

        <LinearLayout
            android:id="@+id/ln_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/background_black"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_c">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Khôi phục mật khẩu"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>


        <View
            android:id="@+id/view_d"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/gray_dot"
            app:layout_constraintTop_toBottomOf="@+id/ln_forgot_password" />

        <TextView
            android:id="@+id/tv_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/lienhe"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_d" />

        <TextView
            android:id="@+id/tv_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/chungtoi"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_d" />

        <LinearLayout
            android:id="@+id/ln_b"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/background_black"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_e">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_telephone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Gọi"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_c"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/background_black"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@+id/ln_b"
            app:layout_constraintTop_toBottomOf="@+id/tv_e">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Trò chuyện"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>